--- a/index.html
+++ b/index.html
@@ -3,106 +3,138 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Baby Tiger</title>
+    <title>Love</title>
     <style>
+      /* General body styling */
       body {
         margin: 0;
         font-family: Arial, sans-serif;
-        overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: center;
-        background: #111;
+        height: 100vh;
+        background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fbc2eb);
+        overflow: hidden;
+        color: #444;
+      }
+
+      /* Container styling */
+      .container {
+        text-align: center;
+        background: #ffffff;
+        padding: 2rem;
+        border-radius: 15px;
+        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+        max-width: 90%;
+        width: 400px;
+      }
+
+      /* Title styling */
+      .container h1 {
+        color: #ff79c6;
+        margin-bottom: 1rem;
+        font-size: 1.8rem;
+      }
+
+      /* Input styling */
+      .container input[type="password"] {
+        width: 100%;
+        padding: 0.8rem;
+        margin: 1rem 0;
+        font-size: 1rem;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        outline: none;
+        transition: all 0.3s ease-in-out;
+      }
+
+      .container input[type="password"]:focus {
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+      }
+
+      /* Button styling */
+      .container button {
+        padding: 0.8rem 2rem;
+        font-size: 1rem;
+        font-weight: bold;
+        background: #80d0c7;
         color: white;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: background 0.3s ease;
       }
-      #wand {
-        width: 150px;
-        transition: transform 0.5s ease-in-out;
+
+      .container button:hover {
+        background: #78c0b6;
       }
-      .hidden {
+
+      /* Popup styling */
+      .popup {
         display: none;
-      }
-      .confetti {
-        position: absolute;
-        width: 10px;
-        height: 10px;
-        background-color: #fff;
-        animation: fall linear infinite;
-      }
-      #message {
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: 4rem;
-        font-weight: bold;
-        opacity: 0;
-        transition: opacity 1s ease-in-out;
-      }
-      #message a {
+        background: #ff9a9e;
         color: white;
-        text-decoration: none;
-        border: 2px solid white;
-        padding: 0.5em 1em;
-        border-radius: 5px;
-        transition: background 0.3s, color 0.3s;
-      }
-      #message a:hover {
-        background: cyan;
-        color: #111;
+        font-size: 1.2rem;
+        font-weight: bold;
+        padding: 2rem;
+        border-radius: 15px;
+        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+        text-align: center;
+        z-index: 10;
+        max-width: 90%;
+        width: 350px;
       }
 
-      @keyframes fall {
-        from {
-          transform: translateY(-100vh) translateX(0);
-        }
-        to {
-          transform: translateY(100vh) translateX(calc(100vw - 200px));
-        }
+      .popup button {
+        margin-top: 1rem;
+        padding: 0.5rem 1.5rem;
+        font-size: 1rem;
+        font-weight: bold;
+        background: #80d0c7;
+        color: white;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: background 0.3s ease;
+      }
+
+      .popup button:hover {
+        background: #78c0b6;
       }
     </style>
   </head>
   <body>
-    <img
-      id="wand"
-      src="d98b0672669d7e1b5a5f4d8f583045a2-removebg-preview.png"
-      alt="Harry Potter Wand"
-    />
-    <div id="message" class="hidden">
-      <a href="love.html">I love you</a>
+    <div class="container">
+      <h1>Enter the Password Baby Tiger 🐅</h1>
+      <input type="password" id="password" placeholder="Enter password here" />
+      <button onclick="checkPassword()">Submit</button>
     </div>
+    <div id="popup" class="popup">
+      Hi! How was your day? 😊
+      <button onclick="closePopup()">Close</button>
+    </div>
+
     <script>
-      const wand = document.getElementById("wand");
-      const message = document.getElementById("message");
-      const body = document.body;
+      // Function to check the password
+      function checkPassword() {
+        const password = document.getElementById("password").value;
+        const popup = document.getElementById("popup");
 
-      wand.addEventListener("click", () => {
-        wand.style.transform = "rotate(360deg)";
-        setTimeout(() => {
-          wand.classList.add("hidden");
-          createConfetti();
-          setTimeout(() => {
-            message.classList.remove("hidden");
-            message.style.opacity = 1;
-          }, 1000);
-        }, 500);
-      });
-
-      function createConfetti() {
-        for (let i = 0; i < 400; i++) {
-          // Increase number of confetti pieces
-          const confetti = document.createElement("div");
-          confetti.classList.add("confetti");
-          confetti.style.left = Math.random() * 100 + "vw"; // Spread horizontally
-          confetti.style.top = Math.random() * 100 + "vh"; // Start across entire screen
-          confetti.style.animationDuration = Math.random() * 5 + 3 + "s"; // Random fall time
-          confetti.style.backgroundColor = `hsl(${
-            Math.random() * 360
-          }, 100%, 50%)`;
-          body.appendChild(confetti);
-
-          setTimeout(() => confetti.remove(), 8000); // Increase removal time
+        if (password === "HPPP") {
+          popup.style.display = "block";
+        } else {
+          alert("Incorrect password. Please try again!");
         }
+      }
+
+      // Function to close the popup
+      function closePopup() {
+        document.getElementById("popup").style.display = "none";
       }
     </script>
   </body>
