--- a/love.html
+++ b/love.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Love</title>
     <style>
+      /* General body styling */
       body {
         margin: 0;
         font-family: Arial, sans-serif;
@@ -16,32 +17,43 @@
         overflow: hidden;
         color: #444;
       }
+
+      /* Container styling */
       .container {
         text-align: center;
         background: #ffffff;
         padding: 2rem;
         border-radius: 15px;
         box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+        max-width: 90%;
+        width: 400px;
       }
+
+      /* Title styling */
       .container h1 {
         color: #ff79c6;
         margin-bottom: 1rem;
-        font-size: 2rem;
+        font-size: 1.8rem;
       }
+
+      /* Input styling */
       .container input[type="password"] {
         width: 100%;
         padding: 0.8rem;
         margin: 1rem 0;
-        font-size: 1.2rem;
+        font-size: 1rem;
         border: none;
         border-radius: 10px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         outline: none;
         transition: all 0.3s ease-in-out;
       }
+
       .container input[type="password"]:focus {
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
       }
+
+      /* Button styling */
       .container button {
         padding: 0.8rem 2rem;
         font-size: 1rem;
@@ -53,9 +65,12 @@
         cursor: pointer;
         transition: background 0.3s ease;
       }
+
       .container button:hover {
         background: #78c0b6;
       }
+
+      /* Popup styling */
       .popup {
         display: none;
         position: fixed;
@@ -64,14 +79,17 @@
         transform: translate(-50%, -50%);
         background: #ff9a9e;
         color: white;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         font-weight: bold;
         padding: 2rem;
         border-radius: 15px;
         box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
         text-align: center;
         z-index: 10;
+        max-width: 90%;
+        width: 350px;
       }
+
       .popup button {
         margin-top: 1rem;
         padding: 0.5rem 1.5rem;
@@ -84,6 +102,7 @@
         cursor: pointer;
         transition: background 0.3s ease;
       }
+
       .popup button:hover {
         background: #78c0b6;
       }
@@ -99,7 +118,9 @@
       Hi! How was your day? 😊
       <button onclick="closePopup()">Close</button>
     </div>
+
     <script>
+      // Function to check the password
       function checkPassword() {
         const password = document.getElementById("password").value;
         const popup = document.getElementById("popup");
@@ -111,6 +132,7 @@
         }
       }
 
+      // Function to close the popup
       function closePopup() {
         document.getElementById("popup").style.display = "none";
       }
